Forms: bring fixed bottom to front using z-index

--- a/less/forms/form.less
+++ b/less/forms/form.less
@@ -106,10 +106,11 @@ body.small-screen form.qui-form.fixed-bottom {
         right: 0;
         left: 0;
         box-shadow: 0 -0.3125em 0.5em -0.3125em @bar-shadow-color;
+        z-index: 1000;
     }
 
     & > div.qui-form-body {
-        margin-bottom: 3.6em; /* it's 3.5 + 0.1 guard */
+        margin-bottom: 10em; /* it's 3.5 + 0.1 guard */
         border-bottom-width: 0;
     }
 }
